--- a/assignment-statcomp.ipynb
+++ b/assignment-statcomp.ipynb
@@ -6,7 +6,8 @@
       "name": "Assignment-StatComp",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPwqMMLT+W8371WwXufXQZe"
+      "authorship_tag": "ABX9TyPwqMMLT+W8371WwXufXQZe",
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -14,6 +15,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/gist/dreamingreen/b56f8b598ef0647bac6fee41da9a207d/assignment-statcomp.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
